nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app:nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
      - name: nginx-deployment
        image: zettasetimg/test:zts-acm-application-0.0.2_commitid-42887b
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: zts-dockerhub-token
